Revision history for Dist-Zilla-Plugins-CJM

Note: the version number of a plugin is the version of the dist in
which it was last changed.

6.000  NOT
	[Metadata]
	  - Treat x_contributors custom key as List
	    (GitHub#6: Robert Rothenberg)

4.27   2015-08-29
	[GitVersionCheckCJM]
	  - Add single_version parameter

4.26   2014-12-13
	- Don't use Moose::Autobox (GitHub#3: Thanks, Olivier Mengué)
	  Dist::Zilla doesn't use it anymore, so it's an extra prerequisite.
	  This affects ArchiveRelease, GitVersionCheckCJM, MakeMaker::Custom,
	  and ModuleBuild::Custom, but their behavior should not have changed.

4.25   2014-11-08
	[ModuleBuild::Custom]
	  - Fix compatibility with Dist::Zilla 5.022

4.24   2014-09-27
	- No functional changes in this release, just improved docs

	[MakeMaker::Custom]
	  - Clarify that not all the boilerplate is required

	[ModuleBuild::Custom]
	  - Clarify that not all the boilerplate is required

4.23   2014-08-16
	[Test::PrereqsFromMeta]
	  - Make insufficient version just a warning instead of a failure
	  - Allow undefined version to fulfill prerequisite version 0
	  - Dump all of %INC if run with -v or --verbose option

4.22   2014-04-05
	[=Dist::Zilla::Role::ModuleInfo]
	  - Use encoded_content with Dist::Zilla 5 (RT#94145)

4.21   2014-02-22
	[RecommendedPrereqs]
	  - Debug log each file scanned (turn on with dzil -v)

	[Test::PrereqsFromMeta]
	  - Special case for if.pm (modules named after keywords are tricky)

4.20   2013-08-24
	[TemplateCJM]
	  - Now distributed separately (no longer part of this dist)

	[Test::PrereqsFromMeta]
	  - Handle an empty hash in prerequisites

4.17   2013-07-26
	[=Dist::Zilla::Role::ModuleInfo]
	  - Die if Module::Metadata constructor fails (RT#87277)

4.16   2013-06-15
	[ModuleBuild::Custom]
	  - Fix spurious warning when using get_prereqs(1)

4.15   2013-05-25
	[MakeMaker::Custom]
	  - Clarify that get_prereqs(1) requires Dist::Zilla 4.300032

	[ModuleBuild::Custom]