@@ -35,5 +35,5 @@ t/metadata.t
 t/mm_custom.t
 t/recommendedprereqs.t
 t/vermod.t
-xt/release/pod-coverage.t
-xt/release/pod-syntax.t
+xt/author/pod-coverage.t
+xt/author/pod-syntax.t
