@@ -15,7 +15,7 @@ finder = :ExecFiles
 skip   = RecommendedPrereqs\.pm
 
 [@Author::CJM / CJM]
-:version       = 4.31 ; use RunExtraTests
+:version       = 6 ; Dist::Zilla 6
 manual_version = 1
 check_recommend = :CheckRecommend
 
@@ -30,4 +30,4 @@ skip = ^Dist::Zilla::Plugin::ModuleBuild$
 skip = ^Dist::Zilla::Role::(?:BeforeRelease|FileFinderUser|FileMunger|FilePruner|InstallTool|MetaProvider|PrereqSource|Releaser|TextTemplate|VersionProvider)$
 
 [Prereqs]
-Dist::Zilla = 4.300009 ; improved MakeMaker subclassing
+Dist::Zilla = 6 ; Path::Tiny
